--- a/assets/styles/output.css
+++ b/assets/styles/output.css
@@ -554,59 +554,16 @@ video {
   --tw-contain-style:  ;
 }
 
-.visible {
-  visibility: visible;
+.text-center {
+  text-align: center;
 }
 
-.collapse {
-  visibility: collapse;
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
-.relative {
-  position: relative;
-}
-
-.block {
-  display: block;
-}
-
-.table {
-  display: table;
-}
-
-.contents {
-  display: contents;
-}
-
-.hidden {
-  display: none;
-}
-
-.border-collapse {
-  border-collapse: collapse;
-}
-
-.transform {
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.resize {
-  resize: both;
-}
-
-.border {
-  border-width: 1px;
-}
-
-.text-blue-600 {
+.text-red-400 {
   --tw-text-opacity: 1;
-  color: rgb(37 99 235 / var(--tw-text-opacity));
-}
-
-.underline {
-  text-decoration-line: underline;
-}
-
-.outline {
-  outline-style: solid;
+  color: rgb(248 113 113 / var(--tw-text-opacity));
 }
